--- a/marvel_v1/slam/config/gmapping_params.yaml
+++ b/marvel_v1/slam/config/gmapping_params.yaml
@@ -1,5 +1,6 @@
 map_update_interval: 2.0
-maxUrange: 3.0
+maxUrange: 13.0
+maxrange: 18.0
 sigma: 0.05
 kernelSize: 1
 lstep: 0.05
@@ -8,20 +9,20 @@ iterations: 5
 lsigma: 0.075
 ogain: 3.0
 lskip: 0
-minimumScore: 50
+minimumScore: 28
 srr: 0.1
 srt: 0.2
 str: 0.1
 stt: 0.2
 linearUpdate: 1.0
 angularUpdate: 0.2
-temporalUpdate: 0.5
+temporalUpdate: 1.0
 resampleThreshold: 0.5
 particles: 100
-xmin: -10.0
-ymin: -10.0
-xmax: 10.0
-ymax: 10.0
+xmin: -100.0
+ymin: -100.0
+xmax: 100.0
+ymax: 100.0
 delta: 0.05
 llsamplerange: 0.01
 llsamplestep: 0.01
